# inno-2020

./: README.md
inno_demo/: CMakeLists.txt  package.xml
inno_final_demo/: CMakeLists.txt  package.xml
tb3_inno_description/: CMakeLists.txt  package.xml
tb3_inno_description/launch/: omx_inno_model.launch  omx_inno_remote.launch  tb3_inno_model.launch
tb3_inno_description/launch/includes/: description.launch.xml
tb3_inno_description/meshes/: omx_rx0ii_link1.stl  omx_rx0ii_link5.stl
tb3_inno_description/rviz/: model.rviz
tb3_inno_description/urdf/: omx_inno.urdf.xacro  tb3_inno.urdf.xacro
