<?xml version="1.0"?>
<package format="3">
  <name>inno_demo</name>
  <version>0.0.1</version>
  <description>
   <p>Metapackage that contains commonly used for inno2020 demo</p>
  </description>

  <maintainer email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</maintainer>
  <author email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</author>

  <license>Apache 2.0</license>
  <!-- <url type="website">http://ros.org/wiki/inno_demo</url> -->
  <!-- <url type="repository">https://github.com/jsk-ros-pkg/inno_demo</url> -->
  <!-- <url type="bugtracker">https://github.com/jsk-ros-pkg/inno_demo/issues</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>inno_final_demo</exec_depend>
  <exec_depend>tb3_inno_description</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
